[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Battle Zone/Battle_Zone.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Character/Character_Official.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Pointer/Pointer.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Sci Fi Room/CameraController.gd" type="Script" id=4]

[sub_resource type="ProceduralSky" id=918]

[sub_resource type="Environment" id=919]
background_mode = 2
background_sky = SubResource( 918 )
ambient_light_color = Color( 1, 1, 1, 1 )
ambient_light_energy = 0.5

[sub_resource type="Curve3D" id=920]
_data = {
"points": PoolVector3Array( 0, 0, 0, 0, 0, 0, -4.68297, 0, -8.00117, 0, 0, 0, 0, 0, 0, 3.17453, -1.54972e-06, -7.99214 ),
"tilts": PoolRealArray( 0, 0 )
}

[node name="Battle_Zone" type="Spatial"]
script = ExtResource( 1 )
stageID = 1
battleStages = [ "res://3D/Battle_Stages/Laboratory.tscn", "res://3D/Battle_Stages/Space_Stage.tscn" ]

[node name="Player" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.142996, 0.0537125, -13.5076 )

[node name="Camera" type="Camera" parent="Player" groups=["Camera"]]
transform = Transform( 0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 26.2423, 38.2278, 26.757 )
projection = 1
current = true
size = 10.0
near = 0.01
script = ExtResource( 4 )
anchorCam1 = NodePath("../AnchorCam1")
anchorCam2 = NodePath("../AnchorCam2")
cam1 = NodePath(".")

[node name="AnchorCam1" type="Position3D" parent="Player"]
transform = Transform( 0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 26.242, 38.228, 26.757 )

[node name="AnchorCam2" type="Position3D" parent="Player"]
transform = Transform( -0.707107, 0.5, -0.5, 0, 0.707107, 0.707107, 0.707107, 0.5, -0.5, -21.203, 31.925, -21.376 )

[node name="Pointer" parent="." instance=ExtResource( 3 )]
transform = Transform( 0.434, 0, 0, 0, 0.434, 0, 0, 0, 0.434, 0.144008, 0, -11.9963 )
camera = NodePath("../Player/Camera")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 919 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, -0.17772, 0.984081, 0, -0.984081, -0.17772, 0, 14.3384, 0 )
light_energy = 0.1
shadow_enabled = true

[node name="Enemy_Spawn" type="Spatial" parent="."]

[node name="0" type="Position3D" parent="Enemy_Spawn"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.796713, -9.27549 )

[node name="1" type="Position3D" parent="Enemy_Spawn"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.72314, 0.796713, -9.27549 )

[node name="2" type="Position3D" parent="Enemy_Spawn"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.15546, 0.796713, -9.27549 )

[node name="Path_Cam" type="Path" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.12076, -3.18428 )
curve = SubResource( 920 )

[node name="PathFollow" type="PathFollow" parent="Path_Cam"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.68297, 0, -8.00117 )
loop = false

[node name="Camera_Overview" type="Camera" parent="Path_Cam/PathFollow"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )
current = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="BG" type="Panel" parent="UI"]
anchor_top = 0.795
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Desc" type="Label" parent="UI/BG"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -286.0
margin_top = -62.5
margin_right = -77.542
margin_bottom = -21.5
rect_scale = Vector2( 3, 3 )
text = "ELIMINE OS INIMIGOS DA √ÅREA!"
align = 1
valign = 1
